# joiestool

./: .gitignore  LICENSE  README.md  pyproject.toml
joiestool/: __init__.py  __main__.py  cli.py  compare.py  genome.py  pipeline.py  predict.py  report.py
test_data/gene/: GCA_000427035.1.fna  GCA_034645115.1.fna  GCF_000167715.1.fna  GCF_000186445.1.fna  GCF_000419275.1.fna
test_data/genome/: GCA_000427035.1.fna  GCA_034645115.1.fna  GCF_000167715.1.fna  GCF_000186445.1.fna  GCF_000419275.1.fna
